--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a class="navbar-brand" href="#" style="padding-right: 550 ; font-size: 200%"><img src="cybseclogo.jpeg" width="50" height="50" > C Y B S E C </a>
   <ul class="navbar-nav ml-auto">
   	 <li class="nav-item">
-      <a class="nav-link" href="#">ABOUT</a>
+      <a class="nav-link" href="#about">ABOUT</a>
     </li>ui
     <li class="nav-item">
       <a class="nav-link" href="#">HACTIVITY</a>
@@ -43,7 +43,10 @@
 </div>
  </div>
 
-
+<div class="about">
+   <h1><b>ABOUT</b></h1>
+   <p>Team CybSec is a team of talented, hardworking individuals, who have come together to put their coding skills to good use. We take up projects related to Web development, Ethical hacking and we are also involved in competitive coding. But the one thing we never stop doing, is learning. Above all, this team is all about sharing knowledge. </p>
+ </div>
 
 <a id="team">
 <blockquote class="blockquote">
