--- a/index.html
+++ b/index.html
@@ -31,22 +31,28 @@
       <a class="nav-link" href="#">GALLERY</a>     </li>
      
   </ul>
-</nav>
-  
+</nav> 
 </div>
- <div class="container-fluid">
-<div class="row">
-	<div class="col-md-12">
-		<img src="https://wallpaperbro.com/img/358204.jpg" width="100%">
-		<div class="container-padding-display-middle">WELCOME TO CYBSEC</div>
-	</div>
-</div>
- </div>
+ 
+<div class="parallax1"></div>
 
-<div class="about">
+<div class="welcome">
+  <h1>Team CybSec</h1>
+  <h2>NIT Warangal</h2>
+</div>
+
+ <div class="about">
    <h1><b>ABOUT</b></h1>
    <p>Team CybSec is a team of talented, hardworking individuals, who have come together to put their coding skills to good use. We take up projects related to Web development, Ethical hacking and we are also involved in competitive coding. But the one thing we never stop doing, is learning. Above all, this team is all about sharing knowledge. </p>
  </div>
+
+ <div class="parallax2"></div>
+
+ <div class="hacktivity">
+   <h1>HACTIVITY</h1>
+</div>
+
+<div class="parallax3"></div>
 
 <a id="team">
 <blockquote class="blockquote">
