--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
      	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" ></script>
      	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
      	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
      	<link rel="stylesheet" type="text/css" href="team.css">
 
 	</head>
@@ -41,14 +43,14 @@
   <h2>NIT Warangal</h2>
 </div>
 
- <div class="about">
+ <div id="about">
    <h1><b>ABOUT</b></h1>
    <p>Team CybSec is a team of talented, hardworking individuals, who have come together to put their coding skills to good use. We take up projects related to Web development, Ethical hacking and we are also involved in competitive coding. But the one thing we never stop doing, is learning. Above all, this team is all about sharing knowledge. </p>
  </div>
 
  <div class="parallax2"></div>
 
- <div class="hacktivity">
+ <div id="hacktivity">
    <h1>HACTIVITY</h1>
 </div>
 
