--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <div class="parallax3"></div>
 
-<a id="team">
+<a class="team">
 <blockquote class="blockquote">
 <div class='p1' align="left"><h3 align="left">"</h3><i>Coming together is a beginning,<div > staying together is progress,</div> <div > and working together is success</div></i><h3 align="right">"</h3></div>
  <footer class="blockquote-footer" ><b><i>HENRY FORD</b></i></footer>
