--- a/index.html
+++ b/index.html
@@ -2,30 +2,22 @@
 <html>
      <head>
      	<title>CYBSEC TEAM</title>
-     	<link rel="stylesheet" href="styles.css">
+     	<link rel="stylesheet" href="indexstyles.css">
      	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
      	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
-	       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
      	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" ></script>
      	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" ></script>
      	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-     	<link rel="stylesheet" type="text/css" href="team.css">
-	       <link rel="stylesheet" href="contact.css">
-
-
-	</head>
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 	<body>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
   <a class="navbar-brand" href="#" style="padding-right: 550 ; font-size: 200%"><img src="cybseclogo.jpeg" width="50" height="50" > C Y B S E C </a>
   <ul class="navbar-nav ml-auto">
   	 <li class="nav-item">
       <a class="nav-link" href="#about">ABOUT</a>
-    </li>ui
+    </li>
     <li class="nav-item">
       <a class="nav-link" href="#">HACTIVITY</a>
     </li>
@@ -33,15 +25,17 @@
       <a class="nav-link" href="#team">TEAM</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="#">CONTACT</a>
+      <a class="nav-link" href="#contact">CONTACT</a>
     </li>
      <li class="nav-item">
-      <a class="nav-link" href="#">GALLERY</a>     </li>
-     
+      <a class="nav-link" href="#">GALLERY</a>
+    </li>
+
   </ul>
-</nav> 
+</nav>
+
 </div>
- 
+
 <div class="parallax1"></div>
 
 <div class="welcome">
@@ -56,115 +50,55 @@
 
  <div class="parallax2"></div>
 
- <div id="hacktivity">
-   <h1>HACTIVITY</h1>
+<div id="team">
+  <h1>OUR TEAM</h1>
+  <p>Meet our Team!</p><br>
+  <a href="./team.html" class="button" target="_blank">Our Team</a>
 </div>
 
 <div class="parallax3"></div>
 
-<a class="team">
-<blockquote class="blockquote">
-<div class='p1' align="left"><h3 align="left">"</h3><i>Coming together is a beginning,<div > staying together is progress,</div> <div > and working together is success</div></i><h3 align="right">"</h3></div>
- <footer class="blockquote-footer" ><b><i>HENRY FORD</b></i></footer>
-<br>
-
-<h1  align="right">OUR TEAM</h1>
-
-<table class="one" cellpadding="20%">
-<tr>
-<td class="t" ><h2 class="men">MENTORS</h2>
-
-<td><h2 class="mem">MEMBERS</h2>
-
-<ul>
-</tr>
-<tr><td  id="t"><li class="men">Viraj Deshmukh</li>
-
-<td ><li class="mem">Anish Damineni</li>
-<td ><li class="mem">Kotakonda Abitha Rao</li>
-</tr>
-
-<tr><td><li class="men">Aakash Kumar</li>
-<td><li class="mem">Rahul Kumar Mishra</li>
-<td><li class="mem">D Ruchira Reddy</li>
-
-</tr>
-
-<tr><td><li class="men">Arpit Goyal</li>
-<td><li class="mem">Ratnala Spandana</li>
-<td><li class="mem">Pasikanti Meghana</li>
-</tr>
-
-<tr><td><li class="men">Lakshit Saini</li>
-
-<td><li class="mem">Ponugoti Rithin</li>
-<td><li class="mem">Ayush Gupta</li>
-
-</tr>
-<tr><td><li class="men">Surendra Yadav</li>
-<td><li class="mem">Harika S.</li>
-<td><li class="mem">Pranav Raj</li>
-
-</tr>
-<tr><td><li class="men">Aravind Reddy</li>
-<td><li class="mem">Vaidehi Bisen</li>
-<td><li class="mem">Aditya Kumar Sharma</li>
-</tr>
-<tr>
-<td><li class="men">Jitendra Verma</li>
-<td><li class="mem">Ashiqa Rahman</li>
-<td><li class="mem">Keerthi Venkatesh Thota</li>
-</tr>
-<tr><td><li class="men">Kamal Singh</li>
-<td><li class="mem">Gosavi Shubham Giri </li>
-<td><li class="mem">Swarna Sweth</li>
-</tr>
-</tr>
-<tr><td><li class="men">Akhilesh Yadav</li>
-<td> <li class="mem">Gayathri Magesh</li></td>
-</tr>
-</ul>
-</table>
-<br><br>
-<div class="parallax3"></div>
-	 <div id="contact">
-   <h1>CONTACT</h1>
-		 <div class="container-fluid bg-grey" style="background-image:url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
-		 <div class="row">
-    <div class="col-sm-5" >
-<font color="white">    
-  <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> National Institute of Technology,
+<div id="contact">
+<h1>CONTACT</h1>
+  <div class="container-fluid bg-grey" style="background-image:url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940)">
+  <div class="row">
+ <div class="col-sm-5" >
+<font color="white">
+<p>Contact us and we'll get back to you within 24 hours.</p>
+   <p><span class="glyphicon glyphicon-map-marker"></span> National Institute of Technology,
 Warangal - 506004,
 TS, INDIA, </p>
-      <p><span class="glyphicon glyphicon-phone"></span> +91 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> cybsec@student.nitw.in</p>
-      <i class="fa fa-facebook-official"></i>
-      <a href="https://www.facebook.com/CybSecNITW" >facebook link</a>
+   <p><span class="glyphicon glyphicon-phone"></span> +91 1515151515</p>
+   <p><span class="glyphicon glyphicon-envelope"></span> cybsec@student.nitw.in</p><br>
+   <p>Check out our social media!</p>
+   <i class="fa fa-facebook-official"></i>
+   <a href="https://www.facebook.com/CybSecNITW">Facebook</a>
 </font>
-    </div>
-    <div class="col-sm-7">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-      <div class="row">
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Send</button>
-        </div>
-      </div>
-    </div>
-  </div>
+ </div>
+ <div class="col-sm-7">
+   <div class="row">
+     <div class="col-sm-6 form-group">
+       <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+     </div>
+     <div class="col-sm-6 form-group">
+       <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+     </div>
+   </div>
+   <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+   <div class="row">
+     <div class="col-sm-12 form-group">
+       <button class="btn btn-default pull-right" type="submit">Send</button>
+     </div>
+   </div>
+ </div>
+</div>
 </div>
 </div>
 <div > <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15179.667753296071!2d79.52621584282222!3d17.982601010671456!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf1b2c37fcb8fefce!2sNational%20Institute%20of%20Technology%2C%20Warangal%2C%20Telangana!5e0!3m2!1sen!2sin!4v1570472900275!5m2!1sen!2sin" width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe></div>
 
 </div>
-	
+
+
 	</body>
 </html>
+
