--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
      <head>
      	<title>CYBSEC TEAM</title>
-     	<link rel="stylesheet" href="indexstyles.css">
+     	<link rel="stylesheet" href="styles.css">
      	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
      	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" ></script>
      	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" ></script>
