--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 	<body>
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+		<nav class="navbar navbar-expand-sm navbar-dark fixed-top">
   <a class="navbar-brand" href="#" style="padding-right: 550 ; font-size: 200%"><img src="cybseclogo.jpeg" width="50" height="50" > C Y B S E C </a>
   <ul class="navbar-nav ml-auto">
   	 <li class="nav-item">
@@ -98,7 +98,7 @@ TS, INDIA, </p>
 
 </div>
 
+<div class="parallax4"></div>
 
 	</body>
 </html>
-
